# publify_agents

./: Dockerfile  README.md  app.py  docker-compose.yml  json_report.md  pyproject.toml  report.md  report_1.md  report_2.md
src/publify_api/: crew.py  main.py
src/publify_api/config/: agents.yaml  tasks.yaml
