[project]
name = "publify_api"
version = "0.1.0"
description = "publify_api using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "crewai[tools]>=0.108.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0"
]

[project.scripts]
publify_api = "publify_api.main:run"
run_crew = "publify_api.main:run"
train = "publify_api.main:train"
replay = "publify_api.main:replay"
test = "publify_api.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
